--- a/index.html
+++ b/index.html
@@ -459,13 +459,36 @@
             </li>
           </ul>
         </div>
+        <div class="input-footer">
+          <p class="peska-footer">Subscribe</p>
+          <form class="footer-foorm-flex">
+            <label class="labell-class">
+              <input 
+              class="footer-input" 
+              type="email" 
+              name="input-email" 
+              id="input-number"
+              placeholder="E-mail"
+              required
+              title="xxx-xxx-xx-xx"
+              pattern="{1,0}"
+              />
+            </label>
+            <button class="btb-footer-input" type="submit">Subscribe
+              <svg class="svg-footer-input" width="24" height="24">
+                <use href="./images/icons.svg#icon-Samalot"></use>
+              </svg>
+            </button>
+          </form>
+          
+        </div>
       </div>
     </footer>
     <!--================FOOTER==================-->
     <!--================MODALKA==================-->
-    <div class="backdrop  is-open">
+    <div class="backdrop  s-open">
       <div class="modal">
-        <button class="close-btn">
+        <button class="close-btn" type="button">
           <svg class="icon-btb-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
@@ -473,7 +496,7 @@
         <p class="modal-p">Leave your contacts and we will call you back</p>
         <form class="form">
           <div class="div-four-input">
-            <label class="label-four-input"for="user-name">Name</label>
+            <label class="label-four-input" for="user-name">Name</label>
             <div class="div-four-icon-center">
               <input 
               class="modal-input"
@@ -485,7 +508,7 @@
               pattern="[a-z]{4,8}"
               >
               
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
