--- a/index.html
+++ b/index.html
@@ -459,12 +459,12 @@
             </li>
           </ul>
         </div>
-        <div class="input-footer">
-          <p class="peska-footer">Subscribe</p>
-          <form class="footer-foorm-flex">
-            <label class="labell-class">
+        <div class="div-footer-form">
+          <p class="footer-form-p">Subscribe</p>
+          <form class="footer-form">
+            <label class="label-footer-input">
               <input 
-              class="footer-input" 
+              class="footer-form-input" 
               type="email" 
               name="input-email" 
              
@@ -474,8 +474,8 @@
               pattern="{1,0}"
               />
             </label>
-            <button class="btb-footer-input" type="submit">Subscribe
-              <svg class="svg-footer-input" width="24" height="24">
+            <button class="footer-form-btn" type="submit">Subscribe
+              <svg class="svg-btn-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-Samalot"></use>
               </svg>
             </button>
